--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,6 +12,7 @@
 <body class="loading">
     <h1>ERROR</h1>
     <h2>Something went wrong <b>:(</b></h2>
+    <h2>You can go back to our <a href="/">Homepage</a>.</h2>
     <div class="gears">
         <div class="gear one">
             <div class="bar"></div>
