--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,10 +53,30 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Type</th>
-                            <th scope="col">Price</th>
+                            <th scope="col">#
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'idDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'idDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'idAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'idAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                            </th>
+                            <th scope="col">Name
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'nameDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'nameDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'nameAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'nameAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                            </th>
+                            <th scope="col">Type
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'typeDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'typeDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'typeAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'typeAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                            </th>
+                            <th scope="col">Price
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'priceDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'priceDesc'})}"><i class="bi bi-arrow-down"></i></a>
+                                <a th:if="${param.filter}" th:href="@{/foodCart(filter=${param.filter},sortBy=${'priceAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                                <a th:unless="${param.filter}" th:href="@{/foodCart(sortBy=${'priceAsc'})}"><i class="bi bi-arrow-up"></i></a>
+                            </th>
                             <th scope="col"></th>
                         </tr>
                     </thead>
