--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:100,200,300,400" rel="stylesheet">
     <link href="/css/error.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
 </head>
 <body class="loading">
     <h1>ERROR</h1>
